# Nannou-Lannard-Jones-Verlet

./: Cargo.toml  README.md  for_project.csv
save tests/: for_project check 2.csv  for_project copy.csv  for_project.csv  for_project_no_electric.csv
src/: main.rs  points.rs
