[package]
name = "nannou-default"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19.0"
rand = "0.8.5"
nannou_egui = "0.19.0"
egui_plot = "0.26.2"
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
[profile.release]
debug = true